# eviction-rent

./: .gitignore  FMR_2Bed_1983_2022_rev.csv  README.md  pyproject.toml
Test/: Eviction_Rent_Project_Test-Copy1.ipynb  Eviction_Rent_Project_Test.Data.ipynb  Eviction_Rent_Project_Test.Mapping.ipynb  Eviction_Rent_Project_Test.Mapping.py  Eviction_Rent_Project_Test.ipynb  Eviction_Rent_Project_Test.memo.ipynb  Eviction_Rent_Project_Test.ver2.ipynb  Eviction_Rent_Project_Test.ver3.ipynb  README.md
assets/data/: evict_merged.parquet
assets/data/raw/: fy2021_safmrs_revised.xlsx
data/: Evict_FMR_merged.csv  fy2020_saFMR_rev.xlsx  fy2022_saFMR_revised.xlsx
eviction_analysis/: __init__.py  __main__.py  analysis.ipynb  etl_evict.py  load.py
eviction_analysis/Test/: Eviction_Rent_Project_Test.ipynb
notebooks/: analysis.ipynb
